--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,38 +1,31 @@
 name: Deploy to GitHub Pages
 
 on:
-  push:
-    branches:
-      - main # main 브랜치에 push될 때 실행
-
-permissions:
-  contents: read
-  pages: write
-  id-token: write
+  push:
+    branches:
+      - main # main 브랜치에 push할 때 실행되도록 설정
 
 jobs:
-  build-and-deploy:
-    runs-on: ubuntu-latest
+  deploy:
+    runs-on: ubuntu-latest
 
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-    - name: Setup Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: 22.11.0 # Node.js 버전
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: "16"
 
-    - name: Install dependencies
-      run: npm ci
+      - name: Install dependencies
+        run: npm install
 
-    - name: Build project
-      run: npm run build
+      - name: Build
+        run: npm run build
 
-    - name: Upload artifact for deployment
-      uses: actions/upload-pages-artifact@v1
-      with:
-        path: ./dist # 빌드 결과물이 위치한 디렉토리
-
-    - name: Deploy to GitHub Pages
-      uses: actions/deploy-pages@v2
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist
